// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`viz.render render fidelity (renderable, not just AJV-valid) > 'area': viz.render produces a spec that compiles, parses, draws, and keeps its data 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v6.json",
  "data": {
    "values": [
      {
        "quarter": "2024-01",
        "region": "North",
        "revenue": 120000,
        "units": 340,
      },
      {
        "quarter": "2024-01",
        "region": "South",
        "revenue": 135000,
        "units": 410,
      },
      {
        "quarter": "2024-02",
        "region": "North",
        "revenue": 128000,
        "units": 360,
      },
      {
        "quarter": "2024-02",
        "region": "South",
        "revenue": 142000,
        "units": 430,
      },
      {
        "quarter": "2024-03",
        "region": "North",
        "revenue": 131000,
        "units": 372,
      },
      {
        "quarter": "2024-03",
        "region": "South",
        "revenue": 150000,
        "units": 455,
      },
    ],
  },
  "description": "Area chart of sum of revenue by quarter.",
  "encoding": {
    "x": {
      "field": "quarter",
      "scale": {
        "type": "time",
      },
      "type": "temporal",
    },
    "y": {
      "aggregate": "sum",
      "field": "revenue",
      "type": "quantitative",
    },
  },
  "mark": {
    "type": "area",
  },
  "title": "Area chart",
  "usermeta": {
    "oods": {
      "a11y": {
        "description": "Area chart of sum of revenue by quarter.",
      },
      "name": "Area chart",
      "specId": "viz:area",
    },
  },
}
`;

exports[`viz.render render fidelity (renderable, not just AJV-valid) > 'bar': viz.render produces a spec that compiles, parses, draws, and keeps its data 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v6.json",
  "data": {
    "values": [
      {
        "quarter": "2024-01",
        "region": "North",
        "revenue": 120000,
        "units": 340,
      },
      {
        "quarter": "2024-01",
        "region": "South",
        "revenue": 135000,
        "units": 410,
      },
      {
        "quarter": "2024-02",
        "region": "North",
        "revenue": 128000,
        "units": 360,
      },
      {
        "quarter": "2024-02",
        "region": "South",
        "revenue": 142000,
        "units": 430,
      },
      {
        "quarter": "2024-03",
        "region": "North",
        "revenue": 131000,
        "units": 372,
      },
      {
        "quarter": "2024-03",
        "region": "South",
        "revenue": 150000,
        "units": 455,
      },
    ],
  },
  "description": "Bar chart of sum of revenue by region.",
  "encoding": {
    "x": {
      "field": "region",
      "scale": {
        "type": "band",
      },
      "type": "ordinal",
    },
    "y": {
      "aggregate": "sum",
      "field": "revenue",
      "type": "quantitative",
    },
  },
  "mark": {
    "type": "bar",
  },
  "title": "Bar chart",
  "usermeta": {
    "oods": {
      "a11y": {
        "description": "Bar chart of sum of revenue by region.",
      },
      "name": "Bar chart",
      "specId": "viz:bar",
    },
  },
}
`;

exports[`viz.render render fidelity (renderable, not just AJV-valid) > 'heatmap': viz.render produces a spec that compiles, parses, draws, and keeps its data 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v6.json",
  "data": {
    "values": [
      {
        "quarter": "2024-01",
        "region": "North",
        "revenue": 120000,
        "units": 340,
      },
      {
        "quarter": "2024-01",
        "region": "South",
        "revenue": 135000,
        "units": 410,
      },
      {
        "quarter": "2024-02",
        "region": "North",
        "revenue": 128000,
        "units": 360,
      },
      {
        "quarter": "2024-02",
        "region": "South",
        "revenue": 142000,
        "units": 430,
      },
      {
        "quarter": "2024-03",
        "region": "North",
        "revenue": 131000,
        "units": 372,
      },
      {
        "quarter": "2024-03",
        "region": "South",
        "revenue": 150000,
        "units": 455,
      },
    ],
  },
  "description": "Heatmap of quarter by region, split by revenue.",
  "encoding": {
    "color": {
      "field": "revenue",
      "scale": {
        "type": "linear",
      },
      "type": "quantitative",
    },
    "x": {
      "field": "region",
      "scale": {
        "type": "band",
      },
      "type": "ordinal",
    },
    "y": {
      "field": "quarter",
      "scale": {
        "type": "band",
      },
      "type": "ordinal",
    },
  },
  "mark": {
    "type": "rect",
  },
  "title": "Heatmap",
  "usermeta": {
    "oods": {
      "a11y": {
        "description": "Heatmap of quarter by region, split by revenue.",
      },
      "name": "Heatmap",
      "specId": "viz:heatmap",
    },
  },
}
`;

exports[`viz.render render fidelity (renderable, not just AJV-valid) > 'line': viz.render produces a spec that compiles, parses, draws, and keeps its data 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v6.json",
  "data": {
    "values": [
      {
        "quarter": "2024-01",
        "region": "North",
        "revenue": 120000,
        "units": 340,
      },
      {
        "quarter": "2024-01",
        "region": "South",
        "revenue": 135000,
        "units": 410,
      },
      {
        "quarter": "2024-02",
        "region": "North",
        "revenue": 128000,
        "units": 360,
      },
      {
        "quarter": "2024-02",
        "region": "South",
        "revenue": 142000,
        "units": 430,
      },
      {
        "quarter": "2024-03",
        "region": "North",
        "revenue": 131000,
        "units": 372,
      },
      {
        "quarter": "2024-03",
        "region": "South",
        "revenue": 150000,
        "units": 455,
      },
    ],
  },
  "description": "Line chart of sum of revenue by quarter, split by region.",
  "encoding": {
    "color": {
      "field": "region",
      "type": "nominal",
    },
    "x": {
      "field": "quarter",
      "scale": {
        "type": "time",
      },
      "type": "temporal",
    },
    "y": {
      "aggregate": "sum",
      "field": "revenue",
      "type": "quantitative",
    },
  },
  "mark": {
    "type": "line",
  },
  "title": "Line chart",
  "usermeta": {
    "oods": {
      "a11y": {
        "description": "Line chart of sum of revenue by quarter, split by region.",
      },
      "name": "Line chart",
      "specId": "viz:line",
    },
  },
}
`;

exports[`viz.render render fidelity (renderable, not just AJV-valid) > 'scatter': viz.render produces a spec that compiles, parses, draws, and keeps its data 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v6.json",
  "data": {
    "values": [
      {
        "quarter": "2024-01",
        "region": "North",
        "revenue": 120000,
        "units": 340,
      },
      {
        "quarter": "2024-01",
        "region": "South",
        "revenue": 135000,
        "units": 410,
      },
      {
        "quarter": "2024-02",
        "region": "North",
        "revenue": 128000,
        "units": 360,
      },
      {
        "quarter": "2024-02",
        "region": "South",
        "revenue": 142000,
        "units": 430,
      },
      {
        "quarter": "2024-03",
        "region": "North",
        "revenue": 131000,
        "units": 372,
      },
      {
        "quarter": "2024-03",
        "region": "South",
        "revenue": 150000,
        "units": 455,
      },
    ],
  },
  "description": "Scatter plot of units by revenue, split by region.",
  "encoding": {
    "color": {
      "field": "region",
      "type": "nominal",
    },
    "x": {
      "field": "revenue",
      "scale": {
        "type": "linear",
      },
      "type": "quantitative",
    },
    "y": {
      "field": "units",
      "scale": {
        "type": "linear",
      },
      "type": "quantitative",
    },
  },
  "mark": {
    "type": "point",
  },
  "title": "Scatter plot",
  "usermeta": {
    "oods": {
      "a11y": {
        "description": "Scatter plot of units by revenue, split by region.",
      },
      "name": "Scatter plot",
      "specId": "viz:scatter",
    },
  },
}
`;

exports[`viz.render render fidelity (renderable, not just AJV-valid) > suggest mode (no chartType): the data-aware pick is renderable and golden-locked at the render boundary 1`] = `
{
  "chartType": "line",
  "mark": "MarkLine",
  "spec": {
    "$schema": "https://vega.github.io/schema/vega-lite/v6.json",
    "data": {
      "values": [
        {
          "quarter": "2024-01",
          "region": "North",
          "revenue": 120000,
          "units": 340,
        },
        {
          "quarter": "2024-01",
          "region": "South",
          "revenue": 135000,
          "units": 410,
        },
        {
          "quarter": "2024-02",
          "region": "North",
          "revenue": 128000,
          "units": 360,
        },
        {
          "quarter": "2024-02",
          "region": "South",
          "revenue": 142000,
          "units": 430,
        },
        {
          "quarter": "2024-03",
          "region": "North",
          "revenue": 131000,
          "units": 372,
        },
        {
          "quarter": "2024-03",
          "region": "South",
          "revenue": 150000,
          "units": 455,
        },
      ],
    },
    "description": "Line chart of revenue by quarter, split by region.",
    "encoding": {
      "color": {
        "field": "region",
        "scale": {
          "type": "band",
        },
        "type": "nominal",
      },
      "x": {
        "field": "quarter",
        "scale": {
          "type": "time",
        },
        "type": "temporal",
      },
      "y": {
        "field": "revenue",
        "scale": {
          "type": "linear",
        },
        "type": "quantitative",
      },
    },
    "mark": {
      "type": "line",
    },
    "title": "Line chart",
    "usermeta": {
      "oods": {
        "a11y": {
          "description": "Line chart of revenue by quarter, split by region.",
        },
        "name": "Line chart",
        "specId": "viz:line",
      },
    },
  },
}
`;
